<resources>
    <string name="app_name">Sunlight</string>
    <string name="welcomeStr">Welcome</string>
    <string name="sunriseStr">Sunrise:</string>
    <string name="sunsetStr">Sunset:</string>
    <string name="sunlightLeftStr">Sunlight left:</string>
    <string name="weatherStr">Weather in:</string>
    <string name="targetsStr">Set your targets</string>
    <string name="walksStr">Walks</string>
    <string name="settingsStr">Settings</string>
    <string name="targetStr">Your daily sunlight target:</string>
    <string name="targetRemainingStr">Remaining:</string>
    <string name="aboutStr">About</string>
    <string name="targetSummaryStr">Set your daily sunlight target here. <br> We recommend as little as 15-30 min a day to lift your mood, improve concentration and aid your goodnight sleep. </br> </string>
    <string name="yourNameStr">Your name:</string>
    <string name="yourTargetStr">Your target: </string>
    <string name="notificationsStr">Notifications</string>
    <string name="receiveNotificationsStr">Receive daily reminders to go outside and enjoy natural sunlight benefits</string>
    <string name="minStr">min</string>
    <string name="locationNotFoundStr">Location not found</string>
    <string name="saveExitStr">Save and Exit</string>
    <string name="walksInfoStr">based on your location:</string>
    <string name="channel_name">SunlightWalk</string>
    <string name="channel_description">notifications to go for a walk</string>
    <string name="tempStr">Temperature: </string>
    <string name="emptyStr" translatable="false"> </string>
    <string name="notSetStr">not set</string>
    <string name="dailyReminderStr">Daily reminder to enjoy the sunlight! </string>
    <string name="dailyReminderContentStr">Only 15 min a day can improve your mood and general wellbeing. Put your shoes on! </string>
    <string name="aboutSunlightStr">About Sunlight</string>
    <string name="feelsStr">Feels like:</string>
    <string name="recordWalksStr">Record walks</string>
    <string name="yourWalksStr">Your walks</string>
    <string name="walkSuggStr">Walk suggestions</string>
    <string name="aboutIntroStr">The purpose of this app is to encourage you to go outside and enjoy the benefits of daylight. Studies have shown that as little as 15 min a day can benefit your well-being and improve your mood. </string>
    <string name="impSleepStr">1. Improves your sleep</string>
    <string name="benefitsStr">Benefits of sunlight</string>
    <string name="b1Str">Sunshine regulates your circadian rhythm by telling your body when to increase and decrease your melatonin levels. So, the more daylight exposure you can get, the better your body will produce melatonin when it’s time to go to sleep.</string>
    <string name="redStressStr">2. Reduces stress</string>
    <string name="b2Str">Melatonin also lowers stress reactivity and being outside will help your body naturally regulate melatonin, which can help reduce your stress level. Additionally, if you\'re doing something active when you’re outside (walking, playing, etc.), that extra exercise also helps to lower stress.</string>
    <string name="depressStr">3. Fights off depression</string>
    <string name="b3Str">Sunshine boosts your body’s level of serotonin, which is a chemical that improves your mood and helps you stay calm and focused. Increased exposure to natural light may help ease the symptoms of seasonal affective disorder - a change in mood that typically occurs in the fall and winter months when there are fewer hours of daylight.</string>
    <string name="b4Str">Our bodies produce vitamin D when exposed to sunlight. Vitamin D is critical for your immune system, and with consistent exposure to sunlight, you can help strengthen it. A healthy immune system can help reduce the risk of illness, infections, some cancers, and mortality after surgery. One of the best ways to get vitamin D is by being outside.</string>
    <string name="immuneStr">4. Strengthens your immune system and bones</string>
    <string name="aboutOutroStr">Please be aware that there are many risks associated with sun exposure. Please read NHS Sunscreen and Sun Safety guideline to ensure you are not accidentally harming yourself. </string>
    <string name="link"><a href="https://www.nhs.uk/live-well/healthy-body/sunscreen-and-sun-safety/">NHS Sun Safety link</a></string>
    <string name="noteStr">Note:</string>
    <string name="todayStr">"Today "</string>
    <string name="walkedForStr">Walked for:</string>
    <string name="achievedStr">"Target achieved: "</string>
    <string name="notYetStr">not yet</string>
    <string name="editWalkStr">Edit today\'s walk</string>
    <string name="historyStr">Walk history:</string>
    <string name="streakStr">Daily streak:</string>
    <string name="daysRowStr">days in a row</string>
    <string name="walksAvailableStr">Sorry, there are no walk suggestions for your location yet.</string>
    <string name="yesStr">yes</string>
    <string name="minTempStr" translatable="false">Min temp: </string>
    <string name="maxTempStr" translatable="false">Max temp: </string>
    <string name="noAddressStr">No address found</string>
    <string name="noDataStr">No data available at this time.</string>
    <string name="targetLeftStr">Left: </string>
    <string name="windStr">Wind speed: </string>
    <string name="mphStr" translatable="false">mph</string>
    <string name="descStr">Description: </string>
    <string name="walkImageStr" translatable="false">Walk image</string>
    <string name="sunlightLogo" translatable="false">sunlight logo</string>
    <string name="loadingImage" translatable="false">loading image</string>
    <string name="notesHint">Walk type, place, thoughts..</string>
    <string name="setNotifiStr">Notify me at </string>
    <string name="internetUnavailableStr">Sorry, couldn\'t load walk suggestions. Please ensure Sunlight has internet access and/or location permission.</string>
    <string-array name="times_array">
        <item>0:00</item><item>1:00</item><item>2:00</item>
        <item>3:00</item><item>4:00</item><item>5:00</item>
        <item>6:00</item><item>7:00</item><item>8:00</item>
        <item>9:00</item><item>10:00</item><item>11:00</item>
        <item>12:00</item><item>13:00</item><item>14:00</item>
        <item>15:00</item><item>16:00</item><item>17:00</item><item>18:00</item>
        <item>19:00</item><item>20:00</item><item>21:00</item><item>22:00</item><item>23:00</item>
    </string-array>
</resources>