<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fdf8f2"
    tools:context=".MainActivity"
    android:fontFamily="@font/marcellus">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="362dp"
        android:layout_height="47dp"
        android:layout_gravity="left"
        android:layout_margin="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/marcellus"
        android:text="@string/welcomeStr"
        android:textColor="#745342"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="@font/marcellus"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/sunlightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/marcellus"
            android:text="@string/sunlightLeftStr"
            android:textColor="#432F2F" />

        <TextView
            android:id="@+id/sunlightLeftValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:fontFamily="@font/marcellus"
            android:text="@string/emptyStr"
            android:textColor="#432F2F" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/welcomeTextView"
        app:layout_constraintStart_toStartOf="@+id/welcomeTextView"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView">

        <TextView
            android:id="@+id/targetTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/marcellus"
            android:text="@string/targetStr"
            android:textColor="#432F2F" />

        <TextView
            android:id="@+id/dailyTargetValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:fontFamily="@font/marcellus"
            android:text="@string/notSetStr"
            android:textColor="#432F2F" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/marcellus"
            android:text="@string/minStr" />
        <!--
        <TextView
            android:id="@+id/targetSummaryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/marcellus"
            android:text="@string/targetRemainingStr"
            android:textColor="#432F2F"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:id="@+id/remainingTargetValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:fontFamily="@font/marcellus"
            android:text="@string/remainingTargetStr"
            android:textColor="#432F2F" />
  -->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="@font/marcellus"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/weatherTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/marcellus"
            android:text="@string/weatherStr"
            android:textColor="#432F2F" />

        <TextView
            android:id="@+id/locationValue"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:fontFamily="@font/marcellus"
            android:text=""
            android:textColor="#432F2F" />


    </LinearLayout>


    <Button
        android:id="@+id/aboutButton"
        android:layout_width="248dp"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:backgroundTint="#745342"
        android:fontFamily="@font/marcellus"
        android:onClick="aboutButtonOnClick"
        android:text="@string/aboutStr"
        app:layout_constraintBottom_toTopOf="@+id/walksButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/walksButton"
        android:layout_width="248dp"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:backgroundTint="#745342"
        android:fontFamily="@font/marcellus"
        android:onClick="walksButtonOnClick"
        android:text="@string/walksStr"
        app:layout_constraintBottom_toTopOf="@+id/settingsButton"
        app:layout_constraintEnd_toEndOf="@+id/aboutButton"
        app:layout_constraintStart_toStartOf="@+id/aboutButton" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="248dp"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#745342"
        android:fontFamily="@font/marcellus"
        android:onClick="settingsButtonOnClick"
        android:text="@string/settingsStr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/walksButton"
        app:layout_constraintStart_toStartOf="@+id/walksButton" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/sunriseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/marcellus"
            android:text="@string/sunriseStr"
            android:textColor="#432F2F" />

        <TextView
            android:id="@+id/sunriseValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:fontFamily="@font/marcellus"
            android:text="@string/emptyStr"
            android:textColor="#432F2F" />

        <TextView
            android:id="@+id/sunsetTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/marcellus"
            android:text="@string/sunsetStr"
            android:textColor="#432F2F" />

        <TextView
            android:id="@+id/sunsetValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:fontFamily="@font/marcellus"
            android:text="@string/emptyStr"
            android:textColor="#432F2F" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="@font/marcellus"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/marcellus"
            android:text="@string/tempStr" />

        <TextView
            android:id="@+id/tempValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/marcellus"
            android:layout_marginLeft="10dp"
            android:text="@string/emptyStr" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/marcellus"
        app:layout_constraintStart_toStartOf="@+id/linearLayout5"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/marcellus"
            android:text="Min temp: " />

        <TextView
            android:id="@+id/minTempValue"
            android:fontFamily="@font/marcellus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:text="@string/emptyStr" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/marcellus"
            android:layout_marginLeft="12dp"
            android:text="Max temp: " />

        <TextView
            android:id="@+id/maxTempValue"
            android:layout_width="wrap_content"
            android:fontFamily="@font/marcellus"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:text="@string/emptyStr" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>